2008-09-26 Og Maciel <ogmaciel@gnome.org>

	* src/lib/common.py: datadir variable is no longer hard coded.
	* src/lib/Makefile.am: Fixes Bug #553890 to get datadir from configuration step.
	* src/lib/defs.py.in: datadir is derived during build time.

2008-09-25 Og Maciel <ogmaciel@gnome.org>

	* src/db/billstable.py: Bump version and make amountDue optional.
	* src/lib/dal.py: Validating that the tables update routine does its job.

2008-09-24 Og Maciel <ogmaciel@gnome.org>

	* src/gui/widgets/calendarwidget.py: Added mnemonics.
	* src/gui/widgets/genericlistview.py: Added a filter.
	* src/gui/widgets/SearchEntry.py: Borrowed code to add smart filtering capabilities.
	* src/gui/widgets/Makefile.am: Added missing and new files.
	* src/gui/maindialog.py: Added the new filtering widget.
	* src/daemon/alarm.py, dbus_manager.py: Added new method call to dbus.
	* src/lib/actions.py, dbus_actions.py: Fixed new methods to be dbus aware.

2008-09-23 Og Maciel <ogmaciel@gnome.org>

	* src/gui/widgets/calendarwidget.py: New calendaring widget for the main dialog.
	* src/gui/widgets/chartwidget.py: New charting widget.
	* src/gui/widgets/charting.py: Charting library based off the hamster-applet.
	* src/gui/maindialog.py: Added new calendar and chart widget.
	* src/lib/actions.py: Added partial support for new method.
	* src/lib/dbus_actions.py: Added partial support for new method.
	* po/POTFILES.in: Added calendarwidget.py.

==== BillReminder 0.3.2 ====

2008-09-10 Og Maciel <ogmaciel@gnome.org>

	* po/pt_BR.po: Updated Brazilian Portuguese translation by Djavan Fagundes.
	* data/billreminder.desktop.in: Added missing semicolon at the end of categories and removed invalid categories.

2008-09-06 Og Maciel <ogmaciel@gnome.org>

	* aboutdialog.py: added secondary form of opening url in case of failed dependency.

2008-08-27 Og Maciel <ogmaciel@gnome.org>

	* no.po: Removed it as this was probably wrong from the start.
	* pt_BR.po: Updated translation by Vladimir Melo.