@@ -2,7 +2,9 @@ BillReminder 0.3.x
 ==================
 
 Backend:
-  * Fixed an issue where datadir was hard coded to '/usr/share' (Bug #553890).
+  * Fixed an issue where datadir was hard coded to '/usr/share'. (Bug #553890).
+  * Make sure that gconf is run (if available) and register schema. Partially
+  fixes Bug #553694.
 
 BillReminder 0.3.2
 ==================
